--- a/SpeedBike/SpeedBike.CSharp.csproj
+++ b/SpeedBike/SpeedBike.CSharp.csproj
@@ -66,8 +66,10 @@
     <Compile Include="Assets\Scripts\Boost.cs" />
     <Compile Include="Assets\Scripts\CameraScript.cs" />
     <Compile Include="Assets\Scripts\DeathWall.cs" />
+    <Compile Include="Assets\Scripts\GameDirector.cs" />
     <Compile Include="Assets\Scripts\PlayerControl.cs" />
     <Compile Include="Assets\Scripts\Ramp.cs" />
+    <Compile Include="Assets\Scripts\RoadScript.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
 </Project>
